examples/test/testpolicy2879.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2879
  namespace: namespace233
spec:
  podSelector:
    matchLabels:
      key3: value26
      key37: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value43
          key25: value9
      podSelector:
        matchLabels:
          key25: value0
          key26: value24
          key43: value21
